--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Monster Omakase - Native Voice Edition</title>
+    <title>Monster Omakase - Cross Platform Audio Fix</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Mali:wght@400;700&family=Fredoka:wght@600&display=swap');
 
@@ -79,12 +79,13 @@
 </head>
 <body>
 
+<audio id="tts-audio"></audio>
 <audio id="bg-music" src="bg-music.mp3" loop></audio>
 
 <div id="game-container">
     <div id="home-screen" class="screen active">
-        <button class="btn" style="background-color: #54a0ff; box-shadow: 0 5px 0 #2e86de;" onclick="showScreen('how-to-screen')">How to Play</button>
-        <button class="btn" style="font-size: 2.5rem; padding: 20px 60px;" onclick="startGameSession()">START</button>
+        <button class="btn" style="background-color: #54a0ff; box-shadow: 0 5px 0 #2e86de;" onclick="unlockAudio(); showScreen('how-to-screen')">How to Play</button>
+        <button class="btn" style="font-size: 2.5rem; padding: 20px 60px;" onclick="unlockAudio(); startGameSession()">START</button>
     </div>
 
     <div id="how-to-screen" class="screen">
@@ -92,7 +93,7 @@
         <div class="how-to-box" style="background: white; padding: 25px; border-radius: 30px; width: 80%; text-align: left; border: 6px solid #ff9ff3; box-shadow: 0 10px 20px rgba(0,0,0,0.1);">
             <h1 class="title-3d" style="font-size: 3rem; margin-top: 0; color: #ff6b81; text-shadow: none;">How to Play 💡</h1>
             <p>1. <b>Drag & Drop:</b> ลากซูชิไปป้อนปากมอนสเตอร์ให้ตรงหมวดหมู่ (ลากด้วยนิ้วได้เลย!)</p>
-            <p>2. <b>Listening:</b> ฟังเสียงอ่านคำศัพท์สำเนียง Native ขณะวิ่งบนสายพาน</p>
+            <p>2. <b>Listening:</b> ฟังเสียงอ่านคำศัพท์ขณะวิ่งบนสายพาน</p>
             <p>3. <b>Boss Stage:</b> กดไมค์ครั้งเดียวแล้วออกเสียงยาวๆ ได้เลย!</p>
             <div style="display: flex; justify-content: center; gap: 15px; margin-top: 20px; flex-wrap: wrap;">
                 <button class="btn" style="background-color: #ff9f43; box-shadow: 0 6px 0 #e67e22;" onclick="showScreen('characters-screen')">👾 Meet the Monsters</button>
@@ -199,6 +200,7 @@
     let score = 0, timeLeft = 30, gameInterval, spawnInterval, bossInterval, currentMode, vocabPool = [];
     let currentBossWord = "";
     let isMicActive = false, isBossStageActive = false, isProcessing = false;
+    let isAudioUnlocked = false; // ตัวแปรเช็คการปลดล็อกเสียง
 
     const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
     let recognition;
@@ -209,6 +211,27 @@
         recognition.continuous = true;
     }
 
+    // --- ฟังก์ชันปลดล็อกข้อจำกัดระบบเสียงของมือถือ ---
+    function unlockAudio() {
+        if (isAudioUnlocked) return;
+        
+        // 1. ปลดล็อกเสียง Effect (อ่านคำศัพท์)
+        const ttsAudio = document.getElementById('tts-audio');
+        ttsAudio.src = "data:audio/mp3;base64,//MkxAA"; // เสียงจำลองสั้นๆ
+        ttsAudio.play().then(() => {
+            ttsAudio.pause();
+            ttsAudio.currentTime = 0;
+        }).catch(e => console.log("TTS unlock error", e));
+
+        // 2. ปลดล็อกเสียงพูดสำรองของเครื่อง
+        if ('speechSynthesis' in window) {
+            const utterance = new SpeechSynthesisUtterance('');
+            window.speechSynthesis.speak(utterance);
+        }
+
+        isAudioUnlocked = true;
+    }
+
     function showScreen(id) {
         document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
         document.getElementById(id).classList.add('active');
@@ -216,6 +239,7 @@
     }
 
     function startGameSession() {
+        // เริ่มเล่นเพลงพร้อมเริ่มโหมด
         const music = document.getElementById('bg-music');
         if(music) { music.volume = 0.4; music.play().catch(e=>console.log(e)); }
         showScreen('mode-screen');
@@ -362,19 +386,23 @@
         }
     }
 
-    // --- อัปเกรดฟังก์ชัน speak() ให้ใช้เสียง Native Speaker ตัวเดียวกันทุกแพลตฟอร์ม ---
+    // --- ฟังก์ชันอ่านออกเสียงที่เสถียรที่สุด ---
     function speak(word) {
-        // ใช้บริการแปลเสียงของเซิร์ฟเวอร์ภายนอกเพื่อบังคับให้ได้เสียง US English เป๊ะๆ เหมือนกันทุกเครื่อง
-        const url = `https://translate.google.com/translate_tts?ie=UTF-8&client=tw-ob&tl=en-US&q=${encodeURIComponent(word)}`;
-        const audio = new Audio(url);
+        const ttsAudio = document.getElementById('tts-audio');
+        // ใช้บริการแปลเสียงให้เป็น Native US English
+        ttsAudio.src = `https://translate.google.com/translate_tts?ie=UTF-8&client=tw-ob&tl=en-US&q=${encodeURIComponent(word)}`;
         
-        audio.play().catch(e => {
-            // ระบบสำรอง: ถ้าไม่มีเน็ต จะกลับไปใช้เสียงในเครื่องแทน
-            window.speechSynthesis.cancel();
-            const utterance = new SpeechSynthesisUtterance(word);
-            utterance.lang = 'en-US';
-            window.speechSynthesis.speak(utterance);
-        });
+        let playPromise = ttsAudio.play();
+        if (playPromise !== undefined) {
+            playPromise.catch(error => {
+                // ระบบสำรอง หากเน็ตหลุดหรือถูกบล็อก ให้ใช้เสียงในเครื่องแทน
+                window.speechSynthesis.cancel();
+                let utterance = new SpeechSynthesisUtterance(word);
+                utterance.lang = 'en-US';
+                utterance.rate = 0.9; // ปรับให้อ่านช้าลงนิดนึงเพื่อให้เด็ก ป.1-3 ฟังชัดๆ
+                window.speechSynthesis.speak(utterance);
+            });
+        }
     }
 </script>
 </body>
